fix all gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ article {
   main {
     padding-left: 20px;
     padding-right: 20px;
+    gap: 80px;
   }
   body {
     gap: 60px;
